<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bills">

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:background="@drawable/box_material_sin"
        android:inputType="none"
        />

    <!-- Cantidad Ingreso -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvCantidadIngreso"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"

        android:hint="@string/cantAmount"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:helperText="@string/amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipo"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etCantidadIngreso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Calendario -->

    <ImageView
        android:id="@+id/imgCalendar"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidadIngreso"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/ic_baseline_calendar_month_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvFechaIngreso"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"

        android:hint="@string/fechaR"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:helperText="@string/fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCalendar"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidadIngreso"
        app:layout_constraintVertical_bias="0.1">



        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etFechaIngreso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgScan"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCalendar"
        app:layout_constraintVertical_bias="0.20"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvScan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"

        android:hint="@string/ndoc"
        android:textColorHint="@color/black"
        app:boxBackgroundMode="outline"
        app:helperText="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgScan"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaIngreso"
        app:layout_constraintVertical_bias="0.1">



        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"


            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScan"/>



</androidx.constraintlayout.widget.ConstraintLayout>